<?xml version="1.0"?>
<package format="3">
  <name>hri_rviz</name>
  <version>0.3.1</version>
  <description>
  This package contains several rviz plugins to visualize HRI-related topics (like face/body region of interests, 3D skeletons...)
  </description>
  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>
  <author>Lorenzo Ferrini</author>
  <author>Séverin Lemaignan</author>


  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>hri_msgs</depend>
  <depend>hri</depend>
  <depend>cv_bridge</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_default_plugins</depend>
  <depend>image_transport</depend>

  <build_depend>qtbase5-dev</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <!-- <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export> -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
